tests/NormalTests/paczka1/fuzzy1/27402812.err
Error in line 2: R6H S833 16,5
Error in line 8: R6H A157 56,2
Error in line 11: Sj33 Sj33 21,9
Error in line 9: cWikm9ntR S833 278,2
Error in line 18: f7jrt9g S833 37,21
Error in line 7: 2PheK A157 68,2
Error in line 15: cWikm9ntR S782 31,0
Error in line 22: R6H S833 57,2
Error in line 26: R6H S903 1,0
Error in line 27: Qpznu A157 88,5
Error in line 35: Qpznu S782 55,5
